# anime-rss

./: .gitignore  .hlint.yaml  LICENSE  README.md  anime-rss.cabal  cabal.project  compose.yml  fourmolu.yaml  gogoanime-rss.cabal  gogoanime.cabal  hie.yaml  package.yaml  stack.yaml  theme-design-2.kra  theme-design.kra
admin-tui/: Main.hs  anime-rss-admin-tui.cabal
admin-tui/src/: Main.hs  Options.hs
app/: Main.hs
backend/: anime-rss-backend.cabal
backend/src/: DBE.hs  Lib.hs
backend/src/AnimeRss/: AtomMime.hs  Ids.hs  Url.hs
backend/src/AnimeRss/DataModel/: Migrations.hs  Queries.hs  Types.hs
backend/src/AnimeRss/Rest/: Api.hs  AtomMime.hs  Auth.hs  Authentication.hs  Cookies.hs  Server.hs  SetCookies.hs
backend/src/AnimeRss/Scraper/: Service.hs
backend/src/AnimeRss/Scraper/Parser/: Gogoanime.hs
backend/src/Crypto/: PasswordStore.hs
backend/src/DBE/: Static.hs
backend/src/Scraper/Parser/: Gogoanime.hs
core/: anime-rss-core.cabal
core/src/Control/Monad/Freer/: Service.hs
core/src/Core/Type/: Anime.hs  Episode.hs  EpisodeEntry.hs  Id.hs  User.hs  UserFollow.hs
core/src/DataModel/: Migrations.hs  OrphanInstances.hs  Queries.hs  Service.hs  Tables.hs
core/src/DataModel/Type/: Error.hs
core/src/Rest/: Api.hs  Authentication.hs  Server.hs  Types.hs
core/src/Scraper/: Service.hs
docker/: .env  Dockerfile  docker-compose.yml  grafana.ini  loki.yaml  nginx.conf  otel-collector-config.yml  prometheus.yaml  tempo.yaml
docker/grafana-provisioning/dashboards/: dashboard.yml  home.json
docker/grafana-provisioning/datasources/: datasource.yml
docker/scripts/: init.sh  manage-database.sh
frontend/: README.md  index.html  package-lock.json  package.json  style.css  style2.css  test.html
frontend/bla/: bla.css  bla.html  style.css  test.html
frontend/src/: Data.elm  Main.elm  Ports.elm  Routing.elm
frontend/src/Page/: AnimeList.elm
scripts/: build-dists.sh  build-image.sh  check-formatting.sh  fix-formatting.sh  init.sh  manage-database.sh  nginx.conf  run-nginx.sh  run.sh
server/: anime-rss-server.cabal
server/src/: Configuration.hs  Main.hs  ResourceAttributes.hs
src/: Rest.hs
src/Control/Monad/Freer/: Service.hs
src/Core/Type/: Anime.hs  Episode.hs  EpisodeEntry.hs  Id.hs  User.hs  UserFollow.hs
src/Crypto/: PasswordStore.hs
src/DataModel/: Acid.hs  OrphanInstances.hs  Persistent.hs  Service.hs
src/DataModel/Acid/: Feed.hs  User.hs
src/DataModel/Service/: Feed.hs
src/DataModel/Type/: Apply.hs  DataModel.hs  Feed.hs  Id.hs  TH.hs  User.hs
src/DataModel/Type/Old/: Feed.hs
src/Database/: Model.hs  OrphanInstances.hs  Service.hs
src/Network/URI/: Static.hs
src/Parser/: Gogoanime.hs  Type.hs
src/Rest/: Api.hs  AtomMime.hs  Authentication.hs  Server.hs  Types.hs
src/Scraper/: Service.hs
src/Scraper/Parser/: Gogoanime.hs  Type.hs
test/: Spec.hs  hlint-test-exe.hs
test/Test/DataModel/Type/: TH.hs
