name:                gogoanime-rss
version:             0.1.0.0
synopsis:            Rss feed generator for gogoanime.io
homepage:            https://github.com/Siprj/gogoanime-rss#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Sipr
maintainer:          sipr.jan@gmail.com
copyright:           2017 Jan Sipr
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/Siprj/gogoanime-rss#readme>

flag pedantic
    description:          Pass additional warning flags and -Werror to GHC.
    default:              False
    manual:               True

library
  hs-source-dirs:      src
  exposed-modules:
      Control.Monad.Freer.Service
      DataModel.Acid
      DataModel.Acid.Feed
      DataModel.OrphanInstances
      DataModel.Service
      DataModel.Service.Feed
      DataModel.Type.DataModel
      DataModel.Type.Feed
      DataModel.Type.TH
      DataModel.Type.Old.Feed
      Network.URI.Static
      Rest
      Scraper.Parser.Gogoanime
      Scraper.Parser.Type
      Scraper.Service

  build-depends:
      base >= 4.7 && < 5

    , acid-state
    , attoparsec
    , bytestring
    , containers
    , data-default
    , feed
    , freer-effects
    , HandsomeSoup
    , haskell-src-exts
    , haskell-src-meta
    , http-media
    , hxt
    , hxt-css
    , lens
    , megaparsec
    , mtl
    , network-uri
    , parser-combinators
    , pretty-simple
    , safecopy
    , servant
    , servant-server
    , split
    , stm
    , template-haskell
    , transformers
    , text
    , time
    , vector
    , wreq
    , xml
    , xml-conduit

  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wimplicit-prelude
    -Wmissing-import-lists
  if flag(pedantic)
    ghc-options:
      -Werror

executable gogoanime-rss
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -rtsopts
    -threaded
    -Wimplicit-prelude
    -with-rtsopts=-N
    -Wmissing-import-lists
  if flag(pedantic)
    ghc-options:
      -Werror

  build-depends:
      base

    , acid-state
    , freer-effects
    , network-uri
    , servant-server
    , wai
    , warp

    , gogoanime-rss

  default-language:    Haskell2010

test-suite gogoanime-rss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs

  other-modules:
      Test.DataModel.Type.TH
      Control.Monad.Freer.Service
      DataModel.Acid
      DataModel.Acid.Feed
      DataModel.OrphanInstances
      DataModel.Service
      DataModel.Service.Feed
      DataModel.Type.DataModel
      DataModel.Type.Feed
      DataModel.Type.TH
      DataModel.Type.Old.Feed
      Network.URI.Static
      Rest
      Scraper.Parser.Gogoanime
      Scraper.Parser.Type
      Scraper.Service

  build-depends:
      base
    , tasty
    , tasty-hunit

    , acid-state
    , attoparsec
    , bytestring
    , containers
    , data-default
    , feed
    , freer-effects
    , HandsomeSoup
    , haskell-src-exts
    , haskell-src-meta
    , http-media
    , hxt
    , hxt-css
    , lens
    , megaparsec
    , mtl
    , network-uri
    , parser-combinators
    , pretty-simple
    , safecopy
    , servant
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , vector
    , wreq
    , xml
    , xml-conduit

  ghc-options:
    -threaded
    -Wall
    -rtsopts
    -with-rtsopts=-N
    -Wimplicit-prelude
    -Wmissing-import-lists

  cpp-options:
    -DTEST

  default-language:    Haskell2010

test-suite hlint-test-exe
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             hlint-test-exe.hs
  build-depends:
      base
    , hlint-test >= 0.1.0.0

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wimplicit-prelude
    -Wmissing-import-lists

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Siprj/gogoanime-rss#readme
