cabal-version: 1.12
name:           anime-rss-admin-tui
version:        0.1.0.0
synopsis:       Rss feed generator for gogoanime.io
description:    Please see the README on Github at  <https://github.com/Siprj/anime-rss#readme>
category:       Web
homepage:       https://github.com/Siprj/gogoanime-rss#readme
bug-reports:    https://github.com/Siprj/gogoanime-rss/issues
author:         Jan Sipr
maintainer:     sipr.jan@gmail.com
copyright:      2018 Jan Sipr
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Siprj/gogoanime-rss

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual: True
  default: True

executable admin-tui
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options:
      -threaded
      -rtsopts -with-rtsopts=-N
      -Wall
      -Wimplicit-prelude
      -Wmissing-import-lists
      -Wmissing-export-lists
      -Wredundant-constraints
      -Wmissing-deriving-strategies
  build-depends:
      HandsomeSoup
    , anime-rss-core
    , attoparsec
    , base >=4.7 && <5
    , brick
    , bytestring
    , cereal
    , conduit
    , containers
    , cryptonite
    , data-default
    , feed
    , freer-effects
    , haskell-src-exts
    , haskell-src-meta
    , http-media
    , http-api-data
    , hxt
    , hxt-css
    , megaparsec
    , monad-logger
    , mtl
    , network-uri
    , optics
    , parser-combinators
    , persistent
    , persistent-sqlite
    , persistent-template
    , pretty-simple
    , safecopy
    , servant
    , servant-auth
    , servant-auth-server
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , uuid
    , vector
    , vty
    , wreq
    , xml
    , xml-conduit
  if flag(pedantic)
    ghc-options: -Werror
  default-language: Haskell2010
