cabal-version:      3.6
name:               anime-rss-admin-tui
version:            0.1.0.0
synopsis:           Rss feed generator for gogoanime.io
description:
  Please see the README on Github at  <https://github.com/Siprj/anime-rss#readme>

category:           Web
homepage:           https://github.com/Siprj/gogoanime-rss#readme
bug-reports:        https://github.com/Siprj/gogoanime-rss/issues
author:             Jan Sipr
maintainer:         sipr.jan@gmail.com
copyright:          2018 Jan Sipr
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/Siprj/gogoanime-rss

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual:      True
  default:     True

common common-stanza
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

executable admin-tui
  import:         common-stanza
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:  Options
  ghc-options:
    -Wall -Wmissing-export-lists -Wredundant-constraints
    -Wmissing-deriving-strategies -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , anime-rss-backend
    , attoparsec
    , base                  >=4.7 && <5
    , brick
    , bytestring
    , cereal
    , conduit
    , containers
    , cryptonite
    , data-default
    , effectful-core
    , exceptions
    , feed
    , freer-effects
    , HandsomeSoup
    , haskell-src-exts
    , haskell-src-meta
    , http-api-data
    , http-media
    , hxt
    , hxt-css
    , megaparsec
    , monad-logger
    , mtl
    , network-uri
    , optics
    , optparse-applicative
    , otel-haskell-sdk
    , parser-combinators
    , postgresql-simple
    , pretty-simple
    , relude
    , safecopy
    , servant
    , servant-auth
    , servant-auth-server
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , uuid
    , vector
    , vty
    , wreq
    , xml
    , xml-conduit

  if flag(pedantic)
    ghc-options: -Werror
