cabal-version:  3.6
name:           anime-rss-backend
version:        0.1.0.0
synopsis:       Rss feed generator for gogoanime.io
description:    Please see the README on Github at  <https://github.com/Siprj/anime-rss#readme>
category:       Web
homepage:       https://github.com/Siprj/gogoanime-rss#readme
bug-reports:    https://github.com/Siprj/gogoanime-rss/issues
author:         Jan Sipr
maintainer:     sipr.jan@gmail.com
copyright:      2022 Jan Sipr
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:

source-repository head
  type: git
  location: https://github.com/Siprj/gogoanime-rss

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual: True
  default: True

common common-stanza
    default-language: GHC2021
    default-extensions:
      NoImplicitPrelude
      DataKinds
      TypeOperators
      DerivingStrategies
      OverloadedStrings
      RecordWildCards
      DuplicateRecordFields

library
  import: common-stanza

  exposed-modules:
      AnimeRss.DataModel.Migrations
      AnimeRss.DataModel.Queries
      AnimeRss.DataModel.Types
      AnimeRss.Ids
      AnimeRss.Url
      DBE
      Lib
      Crypto.PasswordStore
  hs-source-dirs:
      src
  if flag(pedantic)
    ghc-options: -Werror

  ghc-options:
      -Wall
      -Wmissing-export-lists
      -Wredundant-constraints
      -Wmissing-deriving-strategies

  build-depends:
      base >=4.7 && <5
    , effectful-core
    , effectful
    , exceptions
    , optics
    , aeson
    , relude
    , uuid
    , network-uri
    , time
    , bytestring
    , postgresql-simple
    , resource-pool
    , drifter-postgresql
    , drifter
    , pretty-simple
    , text
    , cryptonite
    , cereal
