cabal-version: 1.12
name:           anime-rss-core
version:        0.1.0.0
synopsis:       Rss feed generator for gogoanime.io
description:    Please see the README on Github at  <https://github.com/Siprj/anime-rss#readme>
category:       Web
homepage:       https://github.com/Siprj/gogoanime-rss#readme
bug-reports:    https://github.com/Siprj/gogoanime-rss/issues
author:         Jan Sipr
maintainer:     sipr.jan@gmail.com
copyright:      2018 Jan Sipr
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Siprj/gogoanime-rss

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual: True
  default: True

library
  exposed-modules:
      Control.Monad.Freer.Service
      Core.Type.Anime
      Core.Type.Episode
      Core.Type.EpisodeEntry
      Core.Type.Id
      Core.Type.User
      Core.Type.UserFollow
      Crypto.PasswordStore
      DataModel.OrphanInstances
      DataModel.Persistent
      DataModel.Service
      DataModel.Type.Apply
      Rest.Api
      Rest.Authentication
      Rest.AtomMime
      Rest.Server
      Rest.Types
      Scraper.Parser.Gogoanime
      Scraper.Service
  hs-source-dirs:
      src
  if flag(pedantic)
    ghc-options: -Werror
  ghc-options:
      -threaded 
      -rtsopts -with-rtsopts=-N
      -Wall
      -Wimplicit-prelude
      -Wmissing-import-lists
      -Wmissing-export-lists
      -Wredundant-constraints
      -Wmissing-deriving-strategies
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , bytestring
    , cereal
    , conduit
    , containers
    , cookie
    , cryptonite
    , data-default
    , esqueleto
    , extra
    , either
    , feed
    , freer-effects
    , HandsomeSoup
    , haskell-src-exts
    , haskell-src-meta
    , http-media
    , hxt
    , hxt-css
    , megaparsec
    , monad-logger
    , mtl
    , network-uri
    , optics
    , optics
    , parser-combinators
    , persistent
    , persistent-sqlite
    , persistent-template
    , pretty-simple
    , safecopy
    , servant
    , servant-auth
    , servant-auth-server
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , uuid
    , vector
    , wreq
    , xml
    , xml-conduit
  default-language: Haskell2010
