cabal-version:      1.12
name:               anime-rss-server
version:            0.1.0.0
synopsis:           Rss feed generator for gogoanime.io
description:
  Please see the README on Github at  <https://github.com/Siprj/anime-rss#readme>

category:           Web
homepage:           https://github.com/Siprj/gogoanime-rss#readme
bug-reports:        https://github.com/Siprj/gogoanime-rss/issues
author:             Jan Sipr
maintainer:         sipr.jan@gmail.com
copyright:          2018 Jan Sipr
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/Siprj/gogoanime-rss

flag pedantic
  description: Pass additional warning flags and -Werror to GHC.
  manual:      True
  default:     True

executable anime-rss
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:
    Configuration
    ResourceAttributes

  if flag(pedantic)
    ghc-options: -Werror

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wimplicit-prelude
    -Wmissing-import-lists -Wmissing-export-lists
    -Wredundant-constraints -Wmissing-deriving-strategies

  ghc-options:
  build-depends:
      anime-rss-backend
    , attoparsec
    , base                 >=4.7 && <5
    , bytestring
    , effectful
    , effectful-core
    , HandsomeSoup
    , lifted-base
    , network-uri
    , optics
    , otel-haskell-sdk
    , resource-pool
    , servant-auth
    , servant-auth-server
    , servant-server
    , text
    , unix
    , vector
    , wai
    , warp

  default-language: Haskell2010
